style.css
/* General formatting */
body {
	padding: 0 10px;
	font: 18px/1.5 -apple-system, BlinkMacSystemFont, "avenir next",avenir, "Segoe UI", "lucida grande", "helvetica neue", helvetica, "Fira Sans",roboto, noto, "Droid Sans", cantarell, oxygen, ubuntu, "franklin gothic medium", "century gothic", "Liberation Sans",
	sans-serif;
}

h1, h2, h3 {
	line-height: 1.2
}
.hidden {
	display: none;
  }

/* Your text should be in a nice narrow column */
.content-column {
	max-width: 650px;
	margin: 40px auto;
}

/* But your visualization should be full-width and full-height */
.vis-holder {
	width: 100%;
	height: 100%;
}

.vis-container {
	display: flex;
	flex-direction: column;
	justify-content: center; /* Center horizontally */
	align-items: center; /* Center vertically */
	width: 100%;
	height: 100%;
}

.scatter_bar {
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	align-items: center;
	width: 100%;
	height: 100%;
}

.bar-graph {
	width: 100%; 
	height: 100%; 
	display: block;
}

.fill_space {
	padding-bottom: 34.2%;
}

.bar-button-container button {
	background-color: #f0f0f0;
	border: 1px solid #ccc;
	border-radius: 5px;
	padding: 10px 20px;
	margin: 5px;
	cursor: pointer;
	font-size: 16px;
	transition: background-color 0.3s, color 0.3s;
}
  
.bar-button-container button:hover {
	background-color: #e0e0e0;
}

.bar-button-container button.active {
	background-color: #007bff;
	color: white;
	border-color: #007bff;
}

.clear-button-container {
	display: flex;
	justify-content: center; /* Center horizontally */
	align-items: center; /* Center vertically */
	width: 100%;
	height: 20%;
}

.tooltip {
	position: absolute;
	padding: 5px;
	background: rgb(88, 113, 192);
	border: 1px solid #ccc;
	border-radius: 5px;
	width: 160px;
	color: rgb(255, 255, 255);
	height: 30px;
	font-size: 12px;
	text-decoration-color: white;
	box-shadow: 0 2px 5px rgba(0, 0, 0, .4);
	pointer-events: none;
	visibility: hidden;
	opacity: 0; /* Hidden by default */
	transition: opacity 0.1s ease-in-out;
	z-index: 999999; /* Ensures it is at the front of the graph */
  }

#clear-button {
	align-items: center;
	background-color: #FFE7E7;
	background-position: 0 0;
	border: 1px solid #FEE0E0;
	border-radius: 11px;
	box-sizing: border-box;
	color: #D33A2C;
	cursor: pointer;
	display: flex;
	font-size: 1rem;
	font-weight: 700;
	line-height: 33.4929px;
	padding: 2px 12px;
	text-align: left;
	text-underline-offset: 1px;
	transition: border .2s ease-in-out,box-shadow .2s ease-in-out;
	touch-action: manipulation;
	white-space: nowrap;
	word-break: break-word;
}

#clear-button:hover {
	background-color: #FFE3E3;
	border-color: #FAA4A4;
}

#clear-button:active:hover {
	background-color: #D33A2C;
	box-shadow: rgba(0, 0, 0, 0.12) 0 1px 3px 0 inset;
	color: #FFFFFF;
}

.scatterplot-container {
	width: 100%; /* Make scatter plot smaller */
	height: 100%;
	position: relative;
}

.bar-graphs-container {
	width: 100%; /* Make bar graphs bigger */
	height: 100%;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center; /* Center horizontally */
}

.group {
	width: 100%;
	height: 100%;
}

.group svg {
	width: 100%;
	height: 100%;
}

.bar-chart-container {
	display: flex;
	flex-direction: row;
	justify-content: center; /* Center horizontally */
	align-items: center; /* Center vertically */
	padding-top: 1%;
	width: 100%;
	height: 100%
}

#bar-chart {
	width: 70%;
	height: 100%;
}

#inland-bar {
	width: 70%;
	height: 100%;
}

.point {
	stroke-width: 1px;
	stroke: black;
	opacity: .8;
}

circle.mouseover {
	fill: pink;
	stroke: red;
	opacity: 5;
}

circle.selected {
	fill: green;
	opacity: 5;
}

.countryLabel {
   font-size: 12px;
   fill: black;
}

.axisLabel {
	font-size: 15px;
	fill: Black;

}

.fullscreen-btn {
    position: absolute;
    top: 5%;
    right: 5%;
    background-color: rgba(0, 0, 0, 0.5);
    border: none;
    color: white;
    font-size: 23px;
    cursor: pointer;
    width: 40px; 
    height: 40px; 
    border-radius: 50%;
    transition: background-color 0.3s;
    line-height: 1; 
}

.fullscreen-btn:hover {
	background-color: rgba(0, 0, 0, 0.8);
}

.fullscreen-panel {
	display: none;
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background-color: rgba(0, 0, 0, 0.7);
	justify-content: center;
	align-items: center;
	z-index: 1000;
}

.close-btn {
    position: absolute;
    top: 10px; 
    right: 15%; 
    color: white;
    font-size: 20px; 
    cursor: pointer;
    background-color: black;
    border: none;
    width: 40px; 
    height: 40px; 
    border-radius: 50%;
    transition: background-color 0.3s, transform 0.3s;
    display: flex;
    justify-content: center;
    align-items: center;
    line-height: 1; 
}

.close-btn:hover {
    background-color: rgba(255, 0, 0, 0.8); 
    transform: scale(1.1); 
}

.close-btn:active {
    background-color: rgba(255, 0, 0, 1); 
    transform: scale(0.9); 
}

.legendContainer {
	display: flex;
	flex-direction: column;
	justify-content: space-evenly;
	align-items: flex-start;
}

.carousel {
	position: relative;
	width: 100%;
	max-width: 600px;
	margin: auto;
	overflow: hidden;
	border-radius: 10px;
	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.6);
	padding: 20px;
}
  
.carousel-inner {
    display: flex;
    transition: transform 0.5s ease;
 
}
  
.carousel-item {
	min-width: 100%;
	box-sizing: border-box;
}
  
.carousel img {
	width: 100%;
	display: block;
	border-radius: 10px;
}
  
.carousel-control-prev,
.carousel-control-next {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    background-color: rgba(0, 0, 0, 0.7); 
    border-radius: 50%;
    padding: 10px;
    cursor: pointer;
    transition: background-color 0.3s, transform 0.3s, opacity 0.3s;
    opacity: 0.7; 
}
  
.carousel-control-prev:hover,
.carousel-control-next:hover {
    background-color: rgba(0, 0, 0, 0.9); 
    opacity: 1; 
}

.carousel-control-prev:active,
.carousel-control-next:active {
    transform: translateY(-50%) scale(0.90);
}

.carousel-control-prev {
    left: 10px;
}

.carousel-control-next {
    right: 10px;
}

.carousel-arrow {
    width: 20px;
    height: 20px;
    display: block;
}
  
.carousel-indicators {
	display: flex;
	justify-content: center;
	margin-top: 10px;
}
  
.carousel-indicators .dot {
	height: 10px;
	width: 10px;
	margin: 0 5px;
	background-color: rgba(0, 0, 0, 0.5);
	border-radius: 50%;
	display: inline-block;
	transition: background-color 0.3s, transform 0.3s;
}

.carousel-indicators .dot.active {
	background-color: rgba(0, 0, 0, 0.9);
	transform: scale(1.2);
}

.no-scroll {
    overflow: hidden;
}

.no-click {
    pointer-events: none;
}

/* Fork on GitHub ribbon via https://codepo8.github.io/css-fork-on-github-ribbon/# */  
#forkongithub a{
	background:#00F;
	color:#fff;
	text-decoration:none;
	font-family:arial,sans-serif;
	text-align:center;
	font-weight:bold;
	padding:5px 40px;
	font-size:1rem;
	line-height:1.4rem;
	position:relative;
	transition:0.5s;
}
#forkongithub a:hover{
	background:#118;
	color:#fff;
}
#forkongithub a::before,#forkongithub a::after{
	content:"";
	width:100%;
	display:block;
	position:absolute;
	top:1px;
	left:0;
	height:1px;
	background:#fff;
}
#forkongithub a::after{
	bottom:1px;
	top:auto;
}
@media screen and (min-width:1350px){
	#forkongithub{
		position:fixed;
		display:block;
		top:0;
		right:0;
		width:200px;
		overflow:hidden;
		height:200px;
		z-index:9999;
	}
	#forkongithub a{
		width:200px;
		position:absolute;
		top:60px;
		right:-60px;
		transform:rotate(45deg);
		-webkit-transform:rotate(45deg);
		-ms-transform:rotate(45deg);
		-moz-transform:rotate(45deg);
		-o-transform:rotate(45deg);
		box-shadow:4px 4px 10px rgba(0,0,0,0.8);
	}
}

/* Mobile-friendly adjustments */
@media (max-width: 1350px) {
    .scatter_bar {
        flex-direction: column;
    }

    .bar-graphs-container {
        width: 100%;
    }

    .bar-button-container {
        width: 100%;
        display: flex;
        flex-direction: row;
		justify-content: center;
        align-items: center;
    }

    .bar-button-container button {
        background-color: #f0f0f0;
		border: 1px solid #ccc;
		border-radius: 5px;
		padding: 10px 20px;
		margin: 5px;
		cursor: pointer;
		font-size: 16px;
    }

	.bar-chart-container {
		display: flex;
		flex-direction: column;
		justify-content: center; /* Center horizontally */
		align-items: center; /* Center vertically */
		padding-top: 1%;
		width: 100%;
		height: 100%
	}

	#bar-chart {
		width: 100%;
		height: 100%;
	}

	#inland-bar {
		width: 100%;
		height: 100%;
	}
}

